# freeciv-web

./: .dockerignore  .gitattributes  .gitignore  .mailmap  .travis.yml  ADVANCED.md  CONTRIBUTING.md  Dockerfile  Dockerrun.aws.json  LICENSE.txt  LongTurn.txt  README  README-One-Turn-Per-Day.md  README.md  TODO  Vagrantfile  _config.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  freeciv-web-bootstrap.sh  freeciv.net-bootstrap.sh  index.html  index.md  params.json  requirements.txt
environment-docs/freeciv-doc/man/: .gitignore  Makefile.am  freeciv-client.6.in  freeciv-manual.6.in  freeciv-ruledit.6.in
freeciv-img-extract/amplio2/: Makefile.am  ancientcities.spec  buildings-large.spec  explosions.spec  fix.sh  fog.spec  grid.spec  hills.spec  icons.spec  medievalcities.spec  moderncities.spec  mountains.spec  nuke.spec  ocean.spec  select.spec  terrain1.spec  terrain2.spec  tiles.spec  units.spec  water.spec  wonders-large.spec
freeciv/ai/: Makefile  Makefile.am  Makefile.in  advdiplomacy.c  advspace.c  aiair.h  aicity.c  aidiplomat.c  aihand.h  ailog.c  aiparatrooper.c  aiparatrooper.h  aisettler.c  aitech.c
freeciv/client/gui-ftwl/: Makefile  Makefile.am  Makefile.in  canvas.h  chat.c  citydlg.c  citydlg.h  colors.c  colors.h  dialogs.c  diplodlg.h  gui_main.h  helpdlg.c  inteldlg.c  mapctrl.h  mapview.h  menu.c  messagewin.c  pages.c  plrdlg.c  repodlgs.c  spaceshipdlg.c  spaceshipdlg.h  voteinfo_bar.h
freeciv/client/gui-stub/: Makefile  Makefile.am  Makefile.in  canvas.c  chatline.c  cityrep.c  colors.c  gotodlg.c  graphics.c  gui_main.c  menu.c  pages.c  repodlgs.c  sprite.c  themes.c
freeciv/client/gui-win32/: Makefile  Makefile.am  Makefile.in  canvas.c  chatline.c  chatline.h  cityrep.c  cma_fe.c  colors.c  connectdlg.c  dialogs.c  dialogs.h  diplodlg.c  finddlg.c  gotodlg.c  gotodlg.h  graphics.c  graphics.h  gui_main.c  gui_stuff.h  happiness.h  helpdlg.c  inputdlg.c  inteldlg.c  mapview.h  messagewin.c  messagewin.h  optiondlg.c  optiondlg.h  ratesdlg.c  repodlgs.h  spaceshipdlg.h  wldlg.h
freeciv/common/: Makefile  Makefile.am  Makefile.in  ai.c  ai.h  combat.h  connection.h  dataio.c  dataio.h  diptreaty.c  effects.c  effects.h  events.c  events.h  featured_text.c  featured_text.h  game.h  generate_packets.py  government.c  government.h  map.h  nation.h  packets.c  packets.def  packets.h  packets_gen.c  packets_gen.h  player.c  player.h  spaceship.c  spaceship.h  specialist.h  team.h  terrain.c  terrain.h  unit.h  unitlist.h  unittype.h  version.c  version.h  (+1 more)
freeciv/common/aicore/: Makefile  Makefile.in  aisupport.c  aisupport.h  caravan.c  caravan.h  citymap.h  cm.c  cm.h  path_finding.c  path_finding.h  pf_tools.c
freeciv/data/amplio/: Makefile  Makefile.am  Makefile.in  ancientcities.spec  grid.spec  icons.spec  medievalcities.spec  nuke.spec  select.spec  terrain1.spec
freeciv/data/civ2/: Makefile  Makefile.am  Makefile.in  cities.ruleset  nations.ruleset  script.lua  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/data/fcweb/: Makefile.am  README.fcweb  buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  script.lua  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
freeciv/data/flags/: Makefile  Makefile.am  Makefile.in  convert_png  credits
freeciv/data/hex2t/: Makefile  Makefile.am  Makefile.in  grid.spec
freeciv/data/icons/: Makefile  Makefile.am  Makefile.in
freeciv/data/misc/: Makefile  Makefile.am  Makefile.in  buildings.spec  citybar.spec  colors.tilespec  cursors.spec  flags.spec  gamecolors.tilespec  icons.spec  shields.spec  small.spec  techs.spec  treaty.spec
freeciv/data/nation/: Makefile  Makefile.am  Makefile.am.sh  Makefile.in  abkhaz.ruleset  aborigines.ruleset  abyssinian.ruleset  acadian.ruleset  afghani.ruleset  ainu.ruleset  akwe.ruleset  alandalus.ruleset  alander.ruleset  albanian.ruleset  algerian.ruleset  alsatian.ruleset  amazonian.ruleset  american.ruleset  andorran.ruleset  angolan.ruleset  antarctican.ruleset  arab.ruleset  aragonese.ruleset  aramean.ruleset  argentine.ruleset  armenian.ruleset  ashanti.ruleset  assamese.ruleset  assyrian.ruleset  australian.ruleset  austrian.ruleset  aymara.ruleset  azeri.ruleset  aztec.ruleset  babylonian.ruleset  bangladeshi.ruleset  barbarian.ruleset  basque.ruleset  bavarian.ruleset  belarusian.ruleset  (+302 more)
freeciv/freeciv/: .gitignore  .travis.yml  ABOUT-NLS  AUTHORS  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  civ.x  configure.ac  configure.ac.orig  diff_ignore  fc_version  meson.build
freeciv/freeciv/ai/: .gitignore  Makefile.am  advdiplomacy.h  advdomestic.c  advdomestic.h  advmilitary.c  advmilitary.h  advspace.h  aiair.c  aicity.h  aidata.c  aidata.h  aidiplomat.h  aiexplorer.c  aiexplorer.h  aiferry.c  aiferry.h  aiguard.c  aiguard.h  aihand.c  aihunt.c  aihunt.h  ailog.h  aisettler.h  aitech.h  aiunit.c  (+10 more)
freeciv/server/: Makefile  Makefile.am  Makefile.in  aiiface.c  auth.c  aws4c.c  aws4c.h  barbarian.c  barbarian.h  citytools.c  cityturn.h  civserver.c  civserver.h  commands.c  connecthand.c  connecthand.h  console.c  diplomats.c  edithand.h  gamehand.c  gamehand.h  ggzserver.c  hand_gen.c  hand_gen.h  handchat.c  handchat.h  maphand.c  maphand.h  meta.c  meta.h  netsave.c  netsave.h  notify.c  plrhand.c  plrhand.h  report.c  report.h  ruleset.c  ruleset.h  savegame.c  (+18 more)
freeciv/tests/: Makefile  Makefile.am  Makefile.in  header_guard.sh
freeciv/utility/: Makefile  Makefile.am  Makefile.in  capability.h  distribute.c  distribute.h  fciconv.c  fciconv.h  genlist.c  genlist.h  hash.h  inputfile.h  iterator.c  log.c  log.h  md5.c  mem.h  netintf.h  pqueue.c  pqueue.h  rand.h  registry.c  registry.h  sbuffer.c  shared.c
graphics/amplio2/: Makefile.am  bases.spec  fog.spec  mountains.spec  nuke.spec  select.spec  terrain1.spec  terrain2.spec  upkeep.spec  water.spec
graphics/misc/: Makefile.am  buildings-large.spec  cursors.spec  editor.spec  flags-large.spec  flags.spec  icons.spec  shields.spec  specialists.spec  techs.spec  treaty.spec  wonders-large.spec
(+5338 files in other folders)
