## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/amplio2

pkgdata_DATA =          	\
	ancientcities.png	\
	ancientcities.spec	\
	explosions.png		\
	explosions.spec		\
	fog.png			\
	fog.spec		\
	grid.png		\
	grid.spec		\
	hills.png		\
	hills.spec		\
	medievalcities.png	\
	medievalcities.spec	\
	moderncities.png	\
	moderncities.spec	\
	mountains.png		\
	mountains.spec		\
	nuke.png		\
	nuke.spec		\
	ocean.png		\
	ocean.spec		\
	select-alpha.png	\
	select.png		\
	select.spec		\
	terrain1.png		\
	terrain1.spec		\
	terrain2.png		\
	terrain2.spec		\
	tiles.png		\
	tiles.spec		\
	units.png		\
	units.spec		\
	water.png		\
	water.spec

EXTRA_DIST = $(pkgdata_DATA)
