## Process this file with automake to produce Makefile.in

SUBDIRS = ftwl

noinst_LTLIBRARIES = libcivutility.la

libcivutility_la_SOURCES = \
		astring.c       \
		astring.h       \
		capability.c	\
		capability.h	\
		fciconv.c	\
		fciconv.h	\
		distribute.c	\
		distribute.h	\
		fcintl.c	\
		fcintl.h	\
		genlist.c	\
		genlist.h	\
		hash.c		\
		hash.h		\
		inputfile.c	\
		inputfile.h	\
		ioz.c		\
		ioz.h		\
		iterator.c	\
		iterator.h	\
		log.c		\
		log.h		\
		netintf.c	\
		netintf.h	\
		pqueue.c	\
		pqueue.h	\
		mem.c           \
		mem.h		\
		rand.c		\
		rand.h		\
		registry.c	\
		registry.h	\
		sbuffer.c	\
		sbuffer.h	\
		shared.c	\
		shared.h	\
		speclist.h	\
		specvec.h	\
		string_vector.c	\
		string_vector.h	\
		support.c	\
		support.h	\
		timing.c	\
		timing.h	\
		md5.c		\
		md5.h
