## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/amplio2

pkgdata_DATA =          	\
	activities.png		\
	activities.spec		\
	bases.png		\
	bases.spec		\
	cities.png		\
	cities.spec		\
	explosions.png		\
	explosions.spec		\
	fog.png			\
	fog.spec		\
	grid.png		\
	grid.spec		\
	hills.png		\
	hills.spec		\
	maglev.png		\
	maglev.spec		\
	mountains.png		\
	mountains.spec		\
	nuke.png		\
	nuke.spec		\
	ocean.png		\
	ocean.spec		\
	select-alpha.png	\
	select.spec		\
	terrain1.png		\
	terrain1.spec		\
	terrain2.png		\
	terrain2.spec		\
	tiles.png		\
	tiles.spec		\
	units.png		\
	units.spec		\
	upkeep.png		\
	upkeep.spec		\
	veterancy.png		\
	veterancy.spec		\
	water.png		\
	water.spec

EXTRA_DIST = $(pkgdata_DATA)
