## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/misc

pkgdata_DATA =          \
	buildings.png	\
	buildings.spec	\
	buildings-large.spec	\
	chiefs.png	\
	chiefs.spec	\
	citybar.png	\
	citybar.spec	\
	cityicon.png	\
	civicon.png	\
	colors.tilespec \
	cursors.png	\
	cursors.spec	\
	editor.png	\
	editor.spec	\
	events.png	\
	events.spec	\
	flags-large.spec	\
	flags.spec	\
	governments.png \
	governments.spec \
	icons.spec	\
	intro.png	\
	mpicon.png	\
	overlays.png	\
	overlays.spec	\
	shields-large.spec	\
	shields.spec	\
	small.png	\
	small.spec	\
	space.png	\
	space.spec	\
	specialists.png	\
	specialists.spec \
	techs.png	\
	techs.spec	\
	treaty.png	\
	treaty.spec	\
	wonders-large.spec

EXTRA_DIST = $(pkgdata_DATA)
