## Process this file with automake to produce Makefile.in

MAN_PAGES = 			\
	freeciv-server.6	\
	freeciv-client.6	\
	freeciv-modpack.6	\
	freeciv-manual.6	\
	freeciv-ruledit.6

MAN_LINKS = 			\
	freeciv-gtk3.6		\
	freeciv-gtk3.22.6	\
	freeciv-sdl2.6		\
	freeciv-qt.6		\
	freeciv-mp-gtk3.6	\
	freeciv-mp-qt.6		\
	freeciv-mp-cli.6

man_MANS = $(MAN_PAGES) $(MAN_LINKS)

EXTRA_DIST = $(MAN_LINKS)
