## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libgui-stub.la
AM_CPPFLAGS = -I. -I$(srcdir)/.. -I$(srcdir)/../include -I$(top_srcdir)/utility -I$(top_srcdir)/common $(GUI_stub_CFLAGS) $(SOUND_CFLAGS)

libgui_stub_la_SOURCES = \
	canvas.c	\
	canvas.h	\
	chatline.c	\
	chatline.h	\
	citydlg.c	\
	citydlg.h	\
	cityrep.c	\
	cityrep.h	\
	colors.c	\
	colors.h	\
	connectdlg.c	\
	connectdlg.h	\
	dialogs.c	\
	dialogs.h	\
	diplodlg.c	\
	diplodlg.h	\
	finddlg.c	\
	finddlg.h	\
	gotodlg.c	\
	gotodlg.h	\
	graphics.c	\
	graphics.h	\
	gui_main.c	\
	gui_main.h	\
	helpdlg.c	\
	helpdlg.h	\
	inteldlg.c	\
	inteldlg.h	\
	mapctrl.c	\
	mapctrl.h	\
	mapview.c	\
	mapview.h	\
	menu.c		\
	menu.h		\
	messagedlg.c	\
	messagedlg.h	\
	messagewin.c	\
	messagewin.h	\
	pages.c		\
	pages.h		\
	plrdlg.c	\
	plrdlg.h	\
	ratesdlg.c	\
	ratesdlg.h	\
	repodlgs.c	\
	repodlgs.h	\
	spaceshipdlg.c	\
	spaceshipdlg.h	\
	sprite.c	\
	sprite.h	\
	themes.c	\
	voteinfo_bar.c	\
	voteinfo_bar.h	\
	wldlg.c		\
	wldlg.h
