## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/amplio

pkgdata_DATA =          	\
	ancientcities.png	\
	ancientcities.spec	\
	buildings.spec		\
	cityicon.png		\
	civicon.png		\
	explosions.png		\
	explosions.spec		\
	fog.png			\
	fog.spec		\
	grid.png		\
	grid.spec		\
	icons.spec		\
	medievalcities.png	\
	medievalcities.spec	\
	moderncities.png	\
	moderncities.spec	\
	nuke.png		\
	nuke.spec		\
	ocean.png		\
	ocean.spec		\
	select-alpha.png	\
	select.png		\
	select.spec		\
	terrain1.png		\
	terrain1.spec		\
	terrain2.png		\
	terrain2.spec		\
	tiles.png		\
	tiles.spec		\
	units.png		\
	units.spec		\
	water.png		\
	water.spec		\
	wonders.spec

EXTRA_DIST = $(pkgdata_DATA)
