## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/$(PACKAGE)/civ2

pkgdata_DATA =          \
	buildings.ruleset \
	cities.ruleset	\
	effects.ruleset	\
	game.ruleset	\
	governments.ruleset \
	techs.ruleset	\
	terrain.ruleset	\
	units.ruleset

EXTRA_DIST = $(pkgdata_DATA)
